# AutomotiveIFExample

./: CMakeLists.txt  Main.qml  main.cpp
android/: AndroidManifest.xml  build.gradle
backend/: CMakeLists.txt
frontend/: CMakeLists.txt
interfaces/: ifandroidvehicleproperties.qface
interfaces/templates/: backend_android_carapi_jni.yaml
interfaces/templates/backend_android_carapi_jni/: backend.cpp.tpl  backend.h.tpl  plugin.cmake.tpl  plugin.cpp.tpl  plugin.h.tpl  plugin.json.tpl  plugin.pri.tpl
interfaces/templates/common_android/: filters.py  jni_utils.cpp.tpl  jni_utils.h.tpl  jni_wrapper.cpp.tpl  jni_wrapper.java.tpl  vhal_backend.java.tpl  vhal_interface.java.tpl  vhal_sensors.java.tpl
